[package]
name = "git-me"
version = "0.1.0"
authors = ["Luke Titley <luke@titley.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gitlab = "0.1305.0"
argh = "0.1.4"
git2 = "0.13.12"
serde_yaml = "0.8.14"
serde_json = "1.0.59"
serde = "1.0"
directories = "3.0.1"
glob = "0.3.0"
